# qt-creator-doxygen

./: CMakeLists.txt  DoxygenPlugin.json.in  README.md  doxygen.cpp  doxygen.qrc  doxygenconstants.h  doxygenfilesdialog.cpp  doxygenplugin.cpp  doxygenplugin.h  doxygensettings.cpp  doxygensettings.h  doxygensettingsstruct.cpp  doxygensettingsstruct.h  doxygensettingswidget.cpp  doxygentr.h
.github/workflows/: build_cmake.yml
